Fixed game buttons on safari [#171458557]

--- a/src/components/GameButtonList/components/ClamGameButton/ClamGameButton.module.scss
+++ b/src/components/GameButtonList/components/ClamGameButton/ClamGameButton.module.scss
@@ -9,6 +9,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    &__animated {
+      width: 100%;
+    }
   }
 
   &:hover {
