--- a/src/components/GameButtonList/components/MinesGameButton/MinesGameButton.module.scss
+++ b/src/components/GameButtonList/components/MinesGameButton/MinesGameButton.module.scss
@@ -4,7 +4,7 @@
   .highlight {
     position: absolute;
     left: 1rem;
-    bottom: 0;
+    bottom: 16px;
     width: 37%;
     display: flex;
     flex-direction: column;
@@ -12,8 +12,12 @@
 
     &__animated {
       width: 54%;
-      transform: translateY(11px) translateX(-11px);
+      transform: translateY(6%) translateX(-15%);
       transition: transform 200ms ease-in-out;
+    }
+
+    &__static {
+      width: 100%;
     }
   }
 
